Dynamic Router extensive example initial check-in.