@@ -27,24 +27,31 @@
   </parent>
 
   <artifactId>camel-example-spring-boot-dynamic-router-eip-multimodule</artifactId>
-  <version>4.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Camel SB Examples :: Dynamic Router EIP Multimodule</name>
-  <description>An example on how to use the Dynamic Router EIP component in Spring Boot with multiple modules
-  </description>
+  <description>Dynamic Router EIP component example in Spring Boot with multiple modules</description>
 
   <modules>
+    <module>main-router</module>
     <module>number-generator-service</module>
     <module>all-numbers-service</module>
-    <module>main-router</module>
+    <module>even-numbers-service</module>
+    <module>odd-numbers-service</module>
+    <module>threes-numbers-service</module>
+    <module>fours-numbers-service</module>
+    <module>fives-numbers-service</module>
+    <module>sixes-numbers-service</module>
+    <module>sevens-numbers-service</module>
+    <module>eights-numbers-service</module>
+    <module>nines-numbers-service</module>
+    <module>tens-numbers-service</module>
+    <module>prime-numbers-service</module>
   </modules>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
     <java.version>17</java.version>
-    <spring-boot-version>2.7.10</spring-boot-version>
+    <spring-boot-version>3.0.5</spring-boot-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <category>EIP</category>
   </properties>
@@ -79,6 +86,10 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-dynamic-router-starter</artifactId>
     </dependency>
@@ -103,6 +114,12 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
+          <configuration>
+            <layers>
+              <enabled>true</enabled>
+            </layers>
+            <jvmArguments>--add-opens java.base/sun.net=ALL-UNNAMED</jvmArguments>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.camel</groupId>
@@ -117,7 +134,66 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <source>17</source>
+            <target>17</target>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build-image-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <docker>
+                <host>unix:///var/run/docker.sock</host>
+                <bindHostToBuilder>true</bindHostToBuilder>
+              </docker>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>podman</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build-image-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <docker>
+                <host>unix://${env.XDG_RUNTIME_DIR}/podman/podman.sock</host>
+                <bindHostToBuilder>true</bindHostToBuilder>
+              </docker>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
